feat(scouting): implement  Feature RFC Check Record
